Fix padding for multiple collapse information in list

--- a/src/elements/common-elements/list-tab-elements/list-element/list-element.scss
+++ b/src/elements/common-elements/list-tab-elements/list-element/list-element.scss
@@ -108,7 +108,7 @@ iron-icon {
 }
 
 #collapse-wrapper {
-    padding: 15px 24px 15px 72px;
+    padding: 15px 24px 5px 72px;
     background-color: #EEEEEE;
     /* TODO: replace with app-theme var */
     border-top: 1px solid var(--dark-divider-color, rgba(0, 0, 0, 0.12));
